Adding in Module 1.1.
A first example module. For possible discussion with the partner.

--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -6,8 +6,8 @@ primary_navigation:
       url: /syllabus/
     - name: Resources
       url: /resources/
-    - name: Schedule
-      url: /schedule/
+    - name: Modules
+      url: /modules/
       
     # - name: Document
     #   url: /document/
