--- a/_config.yml
+++ b/_config.yml
@@ -98,9 +98,9 @@ searchgov:
 ##########################################################################################
 
 collections:
-  pages:
+  lessons:
     output: true
-    permalink: /:path/
+    permalink: /lessons/:path/
 
 permalink: pretty
 
