--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,12 +16,21 @@ collections:
     name: lessons
     folder: _lessons/
     create: true
-    slug: "{{indicator}}-{{priority}}-{{assessment}}-{{slug}}"
+    slug: "{{indicator}}-{{priority}}-{{assessment}}-{{slug}}-{{course}}"
     editor:
       preview: false
     fields:
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'widepage'}
       - {label: "Title", name: "title", widget: "string"}
+      - {
+        label: "Course", 
+        name: "course", 
+        widget: "number", 
+        default: 1,
+        min: 1,
+        max: 12,
+        value_type: "int"
+        }
       - {
         label: "Indicator", 
         name: "indicator", 
@@ -40,7 +49,7 @@ collections:
         widget: "number", 
         default: 1,
         min: 1,
-        max: 4,
+        max: 8,
         value_type: "int"
         }
       - {
