--- a/_data/rubric.yaml
+++ b/_data/rubric.yaml
@@ -37,5 +37,5 @@
         tips:
           - Ask team members from different departments (program, IT, procurement, etc.) about their role and priorities.
         red: IT, program, finance, etc. priorities are unconnected or at odds.
-        yellow: Some prioritiesa are aligned, others are disjointed.
+        yellow: Some priorities are aligned, others are disjointed.
         green: IT, program, finance, etc. priorities are aligned around end-user outcomes.
