--- a/_data/rubric.yaml
+++ b/_data/rubric.yaml
@@ -4,19 +4,22 @@
   priorities:
     - level: "Top Priority" 
       dimensions:
-        - tips:
+        - id: oo1.1 
+          tips:
             - Ask to see the product roadmap and the overall roadmap.
           red: There is no roadmap for the product / service or enterprise.
           yellow: There is a roadmap but it is unclear when value will be delivered, product or enterprise roadmaps conflict.
           green: The roadmap captures how the product / service will evolve and demonstrates value to end users within 12 months, aligns with the enterprise roadmap.
-        - tips:
+        - id: oo1.2
+          tips:
             - Ask to see how teams measure their progress against program, policy, and/or baseline metrics.
           red: Explanations of how the state will measure progress or program impact are incongruent or missing all together.
           yellow: Teams consistently articulate the impact they are targeting but do not have metrics or baselines.
           green: Teams consistently articulate their target metrics and can demonstrate how they are doing against baselines.
     - level: "Medium Priority" 
       dimensions:
-        - tips:
+        - id: oo2.1
+          tips:
             - Ask how feedback from users impacts priorities.
             - Ask how the state ensures services are accessible for all.
           red: The team has no information about the current user experience.
@@ -24,12 +27,14 @@
           green: The team has collected feedback from end users directly and can demonstrate how they apply what they learn.
     - level: "Lower Priority"
       dimensions:
-        - tips:
+        - id: oo3.1
+          tips:
             - Ask both project and enterprise-level team members what the current priorities are.
           red: State team members can't speak to priorities at all.
           yellow: State team members can speak to priorities, but they're not captured anywhere in written or visual form.
           green: Outcomes and priorities are clearly articulated by all state team members and live in a shared roadmap that's regularly updated.
-        - tips:
+        - id: oo3.2 
+          tips:
             - Ask team members from different departments (program, IT, procurement, etc.) about their role and priorities.
           red: IT, program, finance, etc. priorities are unconnected or at odds.
           yellow: Some priorities are aligned, others are disjointed.
@@ -40,7 +45,8 @@
   priorities:
     - level: Top Priority
       dimensions:
-        - tips:
+        - id: sc1.1
+          tips:
             - Ask the product and technical leads what their role is and what other responsibilities they have.
             - Look at the APD staffing plan vs. current staffing.
           red: The state depends entirely on a vendor for vision and strategy.
@@ -48,12 +54,14 @@
           green: State staff with IT experience have the bandwidth to lead the technical strategy with feedback from vendors.
     - level: Medium Priority
       dimensions:
-        - tips:
+        - id: sc2.1
+          tips:
             - Ask how and when the team utilitizes different types of expertise.
           red: Teams are not able to be staffed, are only staffed with one skill set/perspective (ex. only a PM), and/or do not include program expertise.
           yellow: Teams are staffed with project and program expertise, able to pull in other experts when needed.
           green: Teams are staffed with project, program, technical, and other expertise.
-        - tips:
+        - id: sc2.2
+          tips:
             - Ask detailed questions about technology, program goals, end users, etc.
             - Pay attention to who answers each question.
           red: Team mebers can't answer questions about the project or issues in plain language.
@@ -61,7 +69,8 @@
           green: All team members (including IT and procurement) can speak in plain language about the project.
     - level: Lower Priority
       dimensions:
-        - tips:
+        - id: sc3.1
+          tips:
             - Join meetings and watch team dynamics.
           red: Adversarial / non-existent relationships across the teams or divisions.
           yellow: Individuals have good relationships, but team dynamics are strained.
