--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,7 +16,8 @@ collections:
     name: lessons
     folder: _lessons/
     create: true
-    slug: "{{indicator}}-{{priority}}-{{assessment}}-{{slug}}-{{course}}"
+    # slug: "{{indicator}}-{{priority}}-{{assessment}}-{{slug}}-{{course}}"
+    slug: "{{slug}}-{{course}}"
     editor:
       preview: false
     fields:
@@ -35,7 +36,7 @@ collections:
         label: "Indicator", 
         name: "indicator", 
         widget: "select", 
-        options: ["Outcomes", "Capacity", "Visibility", "Development"]
+        options: ["Outcomes & Orientation", "State Capacity", "Procurement Flexibility", "Iterative Development"]
         }
       - {
         label: "Priority", 
