Cleaned up nav/resources, added overview
This is starting to look like a clean site. Merging into branch for
push.

--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,7 @@ collections:
     output: true
     # Path so that course/name works from Netlify.
     permalink: /:collection/:path/
+    sort_by: lesson
   pages:
     output: true
     permalink: /:name/
